--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 			<div id="navigation" class="collapse navbar-collapse flex-column" >
 				<div class="profile-section pt-3 pt-lg-0">
 				    <img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image" >			
+			        <ul class="social-list list-inline py-3 mx-auto">
+			            <li class="list-inline-item"><a href="https://www.linkedin.com/in/jorge-perez-fernandez-603613201/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+			            <li class="list-inline-item"><a href="https://github.com/devpefer"><i class="fab fa-github-alt fa-fw"></i></a></li>
+			        </ul>
 			        <hr> 
 				</div><!--//profile-section-->
 				
